<resources>
    <string name="app_name">Quiz</string>
    <string name="question_light1">Canberra is the capital of Australia.</string>
    <string name="question_light2">The Pacific Ocean is larger than the Atlantic Ocean.</string>
    <string name="question_light3">The Suez Canal connects the Red Sea and the Indian Ocean.</string>
    <string name="question_light4">The source of the Nile River is in Egypt.</string>
    <string name="question_light5">The Amazon River is the longest river in the Americas.</string>
    <string name="question_light6">Lake Baikal is the world`s oldest and deepest freshwater lake.</string>

    <string name="question_light7">The longest river in Russia is Lena.</string>
    <string name="question_light8">The UN headquarters is located in New York.</string>
    <string name="question_light9">Gaborone - the capital of Gabon.</string>
    <string name="question_light10"> Sicily is washed by the Mediterranean Sea.</string>
    <string name="question_light11">The capital of Ireland is Dublin.</string>
    <string name="question_light12">Previously, Paris was called Lutetia.</string>
    <string name="question_light13">Atlas is a mountain range located in Europe.</string>
    <string name="question_light14"> In China, despite its impressive size, there is only one time zone.</string>
    <string name="question_light15">The Mayan pyramids of the city of Chichen Itza are located in Peru.</string>
    <string name="question_light16">Reykjavik is the capital of Iceland.</string>
    <string name="question_light17">The coldest point in the world, where people constantly live, is the Russian village of Oymyakon.</string>
    <string name="question_light18">Ukraine is the largest country entirely within Europe.</string>
    <string name="question_light19">The German Empire is the same as the Third Reich.</string>
    <string name="question_light20">The Caspian Sea is the saltiest lake in the world.</string>

    <string name="question_hard1">Most Belgians live in the countryside.</string>
    <string name="question_hard2">In the Baltic countries, not a single woman was elected to the presidency.</string>
    <string name="question_hard3">Andorra is the only principality in the world.</string>
    <string name="question_hard4">The name of the state of Belgium comes from the name of an ancient tribe.</string>
    <string name="question_hard5">Inside Italy are two independent states.</string>
    <string name="question_hard6">There are no countries in Europe that are landlocked.</string>
    <string name="question_hard7">There are no parks in Dublin.</string>
    <string name="question_hard8">San Marino claims to be the world`s oldest sovereign state.</string>
    <string name="question_hard9">UK is the only European country with left-hand traffic.</string>
    <string name="question_hard10">Scotland has a very hot climate.</string>
    <string name="question_hard11">The biggest Irish church is located in Dublin.</string>
    <string name="question_hard12">Not a single woman is buried in the Paris Pantheon.</string>
    <string name="question_hard13">There are almost no factories and plants in Belgium.</string>
    <string name="question_hard14">Naples is the largest city in Italy.</string>
    <string name="question_hard15">There is a city in England whose name contains an exclamation point (!).</string>
    <string name="question_hard16">Sweden is the smallest Scandinavian country.</string>

    <string name="question_hard17">Switzerland did not take part in the Second World War</string>
    <string name="question_hard18">Previously, the Korean peninsula was under Japanese control.</string>
    <string name="question_hard19">USA took Alaska by war</string>
    <string name="question_hard20">Vietnam won the war with the United States thanks to the population</string>

    <string name="true_button">True</string>
    <string name="false_button">False</string>
    <string name="next_button">Next</string>
    <string name="pref_button">Prev</string>
    <string name="correct_toast">Correct!!</string>
    <string name="incorrect_toast">Incorrect!!</string>
    <string name="null_toast">Null questions</string>

    <string name="load_front_list">Synchronized quiz</string>

    <string name="warning_text">Are you sure you want to do this?</string>
    <string name="show_answer_button">Show Answer</string>
    <string name="cheat_button">Cheat!</string>
    <string name="judgment_toast">Cheating is wrong.</string>

    <string name="title_text">Quiz</string>
    <string name="menu_home_text">Home</string>
    <string name="menu_new">New quiz</string>
    <string name="menu_info">Info</string>
    <string name="menu_settings">Settings</string>
    <string name="main_title_name">Home</string>
    <string name="vandroid">vAndroid</string>
    <string name="name">Name…</string>
    <string name="question">Question…</string>
    <string name="new_question">Quiz name</string>
    <string name="end_button">END</string>
    <string name="hard_question">Hard question</string>
    <string name="hard_quiz">Hard quiz!</string>
    <string name="light_quiz">Light quiz!</string>
    <string name="unswer">Answer</string>
    <string name="light_question">Light question</string>
    <string name="clear">CLEAR</string>
    <string name="load_geo_quiz">Load GeoQuiz</string>
    <string name="load_сrime">Unfinished session loaded</string>
    <string name="go">Go!</string>
    <string name="error_load_question">Error load question</string>
    <string name="nice">Nice</string>
    <string name="no_nice">No nice</string>
    <string name="go_hard_question">Difficult questions are available to you</string>
    <string name="inter_ad_id">ca-app-pub-6279944059986833/5924755266</string>
    <string name="massage_show_ads">ads</string>
    <string name="time_format_key">time_format_key</string>
    <string name="chose_time_format">Chose time format</string>
    <string name="remove_ads">Remove ads</string>
    <string name="remove_summary">Remove ads</string>
    <string name="load_api_question">Load api question</string>

    <string name="start_massage_1">Quiz – is a true–false quest, which initially has basic questions with the possibility of adding your own, answering which you earn points 1–100.</string>
    <string name="start_massage_2">After clicking on the name of the quest, you go to the stage of passing, which consists of 2 parts (easy questions and difficult ones). Initially, you go through easy questions, which can earn a maximum of 83.3% (2 stars), if you score 2 stars – for the next passage of the quest, you will answer difficult questions with which you can score 83.3 – 100% (2–3 stars)</string>
    <string name="start_massage_3">Quests can also be deleted - by clicking on the trash can, with a pop-up window with confirmation, as well as the ability not to delete the questions themselves from the database (We recommend checking the box - delete all questions)</string>
    <string name="start_massage_4">You can also share quests, with or without answers, depending on whether you check the box, difficult questions will be marked with a *. (Basic questions do not show answers if you share them)</string>
    <string name="start_massage_7">Near the button with the name of the quest there is an indicator that indicates the difficulty of the questions after pressing it, it can have 2 states, lite question / hard question. Below there are 3 numbers that show: number of easy questions / difficult / number of attempts to pass. Above the stars there are two indications: the left one is the average percentage for all attempts, the right one is best result. The stars show the best result. Date - this is the date the quest was created, the name of the best result is displayed above the date, if it was specified.</string>
    <string name="start_massage_5">When you try to create your own question, you will be prevented by a dialog box in which you must specify the name of the quest, then you indicate the question itself, the answer to it, the difficulty and the next button, and fill in the next question, etc. until you get bored, then press end. Note that end also writes a question.</string>
    <string name="timer">Has a complex logic, if an answered question is displayed when the application starts - the timer does not start, if you rewind questions and an unanswered question opens - the timer starts, with further rewinding of questions - the timer continues to count even if you are on an answered question,
until you answer any of the questions or the timer runs out. If the timer runs out - it answers the current question randomly, if you are on an answered question - it answers the last viewed unanswered question.

In general, the timer starts if you read an unanswered question.</string>
    <string name="start_massage_6">In the future, various school questions and new opportunities will be added. You can also share your questions in the review, the best questions will probably be added to the application. And also, you can support the author with a rating of 5, or remove ads, and you will have everything true ^)</string>

    <string name="FrontActivity_num_chack_norice">Remaining questions-days offline</string>
    <string name="tv_auto_update_question">Question auto-update</string>
    <string name="list_question">A list of questions</string>
    <string name="dialog_text_delete">Delete text?</string>
    <string name="dialog_short_text_delete">delete</string>
    <string name="dialog_short_text_share">Share</string>
    <string name="dialog_text_share">Share text</string>
    <string name="prompt_email">email</string>
    <string name="prompt_password">password</string>
    <string name="action_sign_in_short">out email</string>
    <string name="action_sign_in">Login</string>
    <string name="action_registration">registration</string>
    <string name="menu_network">Network</string>
    <string name="welcome" translatable="false">"Welcome!"</string>
    <string name="invalid_username" translatable="false">Not a valid username</string>
    <string name="invalid_password" translatable="false">Password must be >5 characters</string>
    <string name="login_failed" translatable="false">"Login failed"</string>
    <string name="prompt_name">Your name</string>
    <string name="prompt_years">Your birthday</string>
    <string name="prompt_nickname">Come up with your gaming nickname</string>
    <string name="prompt_city">Your city</string>

</resources>